PEC replaces email in login and registration

--- a/gi-pro-mobile/scss/ionic.app.scss
+++ b/gi-pro-mobile/scss/ionic.app.scss
@@ -475,7 +475,7 @@ input[readonly] {
       margin-top: 10px;
     }
     .contacts ul,
-    .competenze ul {
+    .competences ul {
       padding-bottom: 10px;
       margin: 10px;
       li {
@@ -523,7 +523,7 @@ input[readonly] {
       .description_text {}
     }
     */
-    .competenze {
+    .competences {
       .title {
         font-weight: bold;
         margin: 10px;
@@ -572,10 +572,10 @@ input[readonly] {
 }
 
 
-
 /*
  * DETAILS
  */
+
 .details {
   a,
   a:hover,
@@ -583,7 +583,6 @@ input[readonly] {
   a:visited {
     color: $t_orange;
   }
-
   .datetime {
     padding: 10px 0;
     /*text-align: center;*/
@@ -593,7 +592,6 @@ input[readonly] {
       font-weight: bold;
     }
   }
-
   .professional {
     margin-bottom: 10px;
     padding-bottom: 20px;
@@ -640,7 +638,6 @@ input[readonly] {
       }
     }
   }
-
   .poi {
     padding-top: 10px;
     .type {
@@ -656,6 +653,7 @@ input[readonly] {
     }
   }
 }
+
 .card {
   ul {
     padding-top: 5px;
@@ -665,7 +663,6 @@ input[readonly] {
       padding-right: 5px;
     }
   }
-
   .phone,
   .email {
     white-space: nowrap;
@@ -677,9 +674,11 @@ input[readonly] {
   }
 }
 
+
 /*
  * NOTIFICATIONS
  */
+
 .notifications .notification.unread {
   h2,
   h3 {
@@ -687,20 +686,22 @@ input[readonly] {
   }
 }
 
+
 /*
  * SEARCH
  */
+
 .search {
   .row,
   .col {
     padding: 0;
   }
 }
+
 .searchresults {
   p {
     margin: 0;
   }
-
   .card {
     .item {
       ul {
@@ -719,9 +720,11 @@ input[readonly] {
   }
 }
 
+
 /*
  * FORMS
  */
+
 .form-request,
 .form-offer {
   .row,
@@ -730,9 +733,11 @@ input[readonly] {
   }
 }
 
+
 /*
  * POIS MODAL, TYPES/REGIONS POPUPS
  */
+
 .modal-pois {
   .list-container {
     .input-label {
@@ -747,30 +752,30 @@ input[readonly] {
       }
     }
   }
-
   .list-container>.list {
     margin-top: 5px;
   }
 }
+
 .popup-types,
 .popup-regions {
   .popup-head {
     display: none;
   }
-
   .popup-body {
     padding: 0;
     overflow-x: hidden;
   }
-
   .item {
     white-space: normal;
   }
 }
 
+
 /*
  * LOGIN AND REGISTRATION
  */
+
 .login,
 .registration {
   text-align: center;
@@ -789,9 +794,11 @@ input[readonly] {
   */
 }
 
+
 /*
  * PROFILE
  */
+
 .profile {
   .profile-image-container {
     display: block;
@@ -816,7 +823,6 @@ input[readonly] {
       }
     }
   }
-
   .contact {
     overflow: hidden;
     white-space: nowrap;
@@ -829,7 +835,6 @@ input[readonly] {
     }
     span {}
   }
-
   .contacts {
     .row {
       padding: 0;
@@ -842,29 +847,26 @@ input[readonly] {
     }
     input {
       display: inline;
-      border-bottom: 1px solid #000;
-      height: inherit;
+      border-bottom: 1px solid black;
     }
   }
-
   .name {
     font-size: 20px;
     font-weight: 500;
     color: $dark;
     padding-bottom: 8px;
   }
-
   .title {
     font-size: 14px;
     color: $dark;
     font-style: italic;
   }
-
   .address {
     padding-top: 16px;
     color: $dark;
   }
 }
+
 .matches {
   padding-top: 20px;
   span {
@@ -873,14 +875,15 @@ input[readonly] {
   }
 }
 
+
 /*
  * CREDITS
  */
+
 .credits {
   .center {
     text-align: center;
   }
-
   .credits_title {
     text-align: center;
     color: $t_darkblue;
@@ -889,11 +892,9 @@ input[readonly] {
     margin-top: 20px;
     margin-bottom: 10px;
   }
-
   .bg-image {
     background-color: $t_lightblue;
   }
-
   .credits_subtitle {
     margin-top: 20px !important;
     text-align: center;
@@ -901,7 +902,6 @@ input[readonly] {
     font-size: 18px;
     font-weight: bold;
   }
-
   .credits_row {
     padding: 0;
     margin-bottom: 10px;
@@ -909,27 +909,22 @@ input[readonly] {
       text-align: center;
     }
   }
-
   .credits_row.last {
     margin-bottom: 20px;
   }
-
   .credits_row.version {
     color: $t_blue;
     text-transform: uppercase;
   }
-
   .credits_row.version .col {
     font-size: 12px;
     line-height: 12px;
   }
-
   .credits_mail {
     color: black;
     font-size: 14px;
     font-weight: normal;
   }
-
   .credits_version {
     text-align: center;
   }
