--- a/gi-pro-mobile/www/templates/login.html
+++ b/gi-pro-mobile/www/templates/login.html
@@ -4,7 +4,7 @@
 
     <div class="list list-inset">
       <label class="item item-input item-input-cf">
-        <input type="text" ng-model="user.email" placeholder="{{'email_placeholder' | translate}}">
+        <input type="text" ng-model="user.email" placeholder="{{'pec_placeholder' | translate}}">
       </label>
       <label class="item item-input">
         <input type="password" ng-model="user.password" placeholder="{{'password' | translate}}">
