--- a/gi-pro-mobile/www/templates/registration_step_1.html
+++ b/gi-pro-mobile/www/templates/registration_step_1.html
@@ -24,7 +24,7 @@
     <form name="myForm">
       <div class="list list-inset">
         <label class="item item-input item-input-cf">
-          <input type="text" ng-model="registration.email" placeholder="{{'email_placeholder' | translate}}">
+          <input type="text" ng-model="registration.pec" placeholder="{{'pec_placeholder' | translate}}">
         </label>
         <label class="item item-input item-input-cf">
           <input type="password" id="pw1" name="pw1" ng-model="registration.password" placeholder="{{'password' | translate}}" ng-required="" />
