--- a/gi-pro-mobile/www/templates/serviceAndProf.html
+++ b/gi-pro-mobile/www/templates/serviceAndProf.html
@@ -19,17 +19,23 @@
     <!--
     <button class="button button-icon button-clear ion-android-funnel" ng-click="orderServices()" ng-hide="professionistTab"></button>
     -->
-    <button class="button button-icon button-clear" ng-class="{'ion-map':listVisualization, 'ion-ios-list-outline':!listVisualization}" ng-click="switchToMap()" ng-hide="searchBarVisible"></button>
+    <button class="button button-icon button-clear" ng-class="{'ion-map':listVisualization, 'ion-ios-list-outline':!listVisualization}"
+      ng-click="switchToMap()" ng-hide="searchBarVisible"></button>
   </ion-nav-buttons>
-
   <ion-tabs class="tabs-calm" ng-class="{'tabs-item-hide': !logged}">
     <ion-tab title="{{'service_tab' | translate}}" on-select="initServiceMap()" ng-if="logged">
       <ion-pane>
         <ion-content>
           <!-- filter for services -->
           <div class="selected-filters row" ng-if="!selectingFilter">
-            <div class="col col-50 selected-service" ng-click="openFilters('service')"><span ng-if="filters.selectedService">{{'selectedService_label'|translate}}:{{filters.selectedService.name}}</span><span ng-if="!filters.selectedService">{{'allServices_label'|translate}}</span></div>
-            <div class="col col-50 selected-zone" ng-click="openFilters('zone')"><span ng-if="filters.selectedZone">{{'selectedZone_label'|translate}}:{{filters.selectedZone.name}}</span><span ng-if="!filters.selectedZone">{{'allZones_label'|translate}}</span></div>
+            <div class="col col-50 selected-service" ng-click="openFilters('service')">
+              <span ng-if="filters.selectedService">{{'selectedService_label'|translate}}:{{filters.selectedService.name}}</span>
+              <span ng-if="!filters.selectedService">{{'allServices_label'|translate}}</span>
+            </div>
+            <div class="col col-50 selected-zone" ng-click="openFilters('zone')">
+              <span ng-if="filters.selectedZone">{{'selectedZone_label'|translate}}:{{filters.selectedZone.name}}</span>
+              <span ng-if="!filters.selectedZone">{{'allZones_label'|translate}}</span>
+            </div>
           </div>
           <!-- services -->
           <div class="services-list" ng-if="selectingFilter && selectingServices">
@@ -43,13 +49,13 @@
             <div ng-click="selectFilter('service','zone',null)">{{'allZones_label'|translate}}</div>
             <div ng-repeat="zone in filters.allZones" ng-click="selectFilter('service','zone',zone)">{{zone.name}}</div>
           </div>
-
           <div class="list-visualization" ng-if="listVisualization">
             <ion-list class="list">
               <ion-scroll>
                 <ion-refresher on-refresh="loadServices()">
                 </ion-refresher>
-                <div class="card" ng-repeat="service in filteredServices = (activeServices | filter :{service:filters.selectedService.name,zone:filters.selectedZone.name})" ng-if="!!activeServices && activeServices.length > 0" ng-click="openServiceDetails(service)">
+                <div class="card" ng-repeat="service in filteredServices = (activeServices | filter :{service:filters.selectedService.name,zone:filters.selectedZone.name})"
+                  ng-if="!!activeServices && activeServices.length > 0" ng-click="openServiceDetails(service)">
                   <a class="item" ng-click="openDetailsService(service)">
                     <div><span>{{service.service}}</span></div>
                     <p>{{service.professional.name}}{{service.professional.surname}}</p>
@@ -62,16 +68,15 @@
             </ion-infinite-scroll>
             <p ng-hide="filteredServices.length ">{{'services_empty' | translate}}</p>
           </div>
-
           <div class="map-visualization" ng-if="!listVisualization">
             <div id="modal-map-container" data-tap-disabled="true">
-              <leaflet event-broadcast="events" center="center" markers="servicesMarkers" style="width: 100%; height: 700px;" ng-init="initServiceMap()" id="serviceMap"></leaflet>
+              <leaflet event-broadcast="events" center="center" markers="servicesMarkers" style="width: 100%; height: 700px;" ng-init="initServiceMap()"
+                id="serviceMap"></leaflet>
             </div>
           </div>
         </ion-content>
       </ion-pane>
     </ion-tab>
-
     <ion-tab title="{{'prof_tab' | translate}}" on-select="initProfessionMap()">
       <ion-pane>
         <ion-content>
@@ -79,7 +84,9 @@
           <div class="selected-filters row" ng-if="!selectingFilter">
             <div class="col col-50 selected-profession" ng-click="openFilters('profession')"> <span ng-if="filters.selectedProfession">{{'selectedProfession_label'|translate}}:{{filters.selectedProfession.name}}</span>
               <span ng-if="!filters.selectedProfession">{{'allProfession_label'|translate}}</span></div>
-            <div class="col col-50 selected-zone" ng-click="openFilters('zone')"> <span ng-if="filters.selectedZone">{{'selectedZone_label'|translate}}:{{filters.selectedZone.name}}</span><span ng-if="!filters.selectedZone">{{'allZones_label'|translate}}</span>
+            <div class="col col-50 selected-zone" ng-click="openFilters('zone')">
+              <span ng-if="filters.selectedZone">{{'selectedZone_label'|translate}}:{{filters.selectedZone.name}}</span>
+              <span ng-if="!filters.selectedZone">{{'allZones_label'|translate}}</span>
             </div>
           </div>
           <!-- professions -->
@@ -94,13 +101,13 @@
             <div ng-click="selectFilter('profession','zone',null)">{{'allZones_label'|translate}}</div>
             <div ng-repeat="zone in filters.allZones" ng-click="selectFilter('profession','zone',zone)">{{zone.name}}</div>
           </div>
-
           <div class="list-visualization" ng-if="listVisualization">
             <ion-list class="list">
               <ion-scroll>
                 <ion-refresher on-refresh="loadProfessionist()">
                 </ion-refresher>
-                <div class="card" ng-repeat="professionist in filteredProfessional = (activeProfessionals | filter :{profession:filters.selectedProfession.name,zone:filters.selectedZone.name})" ng-if="!!activeProfessionals && activeProfessionals.length > 0" ng-click="openProfDetails(professionist)">
+                <div class="card" ng-repeat="professionist in filteredProfessional = (activeProfessionals | filter :{profession:filters.selectedProfession.name,zone:filters.selectedZone.name})"
+                  ng-if="!!activeProfessionals && activeProfessionals.length > 0" ng-click="openProfDetails(professionist)">
                   <a class="item item-avatar" ng-click="openDetailsProf(professionist)">
                     <img ng-src="{{professionist.imageUrl}}">
                     <div><span>{{professionist.name}}</span><span>{{professionist.surname}}</span></div>
@@ -115,7 +122,8 @@
           </div>
           <div class="map-visualization" ng-if="!listVisualization">
             <div id="modal-map-container" data-tap-disabled="true">
-              <leaflet event-broadcast="events" center="center" markers="professionalMarkers" style="width: 100%; height: 700px;" ng-init="initProfessionMap()" id="professionMap"></leaflet>
+              <leaflet event-broadcast="events" center="center" markers="professionalMarkers" style="width: 100%; height: 700px;" ng-init="initProfessionMap()"
+                id="professionMap"></leaflet>
             </div>
           </div>
         </ion-content>
