--- a/gi-pro-mobile/www/templates/profile.html
+++ b/gi-pro-mobile/www/templates/profile.html
@@ -118,7 +118,7 @@
           <ion-list class="list-accordion">
             <div class="item-accordion" ng-repeat="service in services">
               <ion-item class="item-accordion-header item-icon-right" ng-click="toggleService(service)">
-                <div>{{service.serviceType}}</div>
+                <div>{{getServiceNameByID(service.serviceType)}}</div>
                 <!--<i class="icon" ng-class="{'ion-arrow-down-b': !isActiveItem(entry), 'ion-arrow-up-b': isActiveItem(entry)}"></i>-->
                 <i class="icon ion-arrow-down-b" ng-class="{'open': isServiceShown(service)}"></i>
               </ion-item>
@@ -126,14 +126,18 @@
                 <i class="icon ion-ios-location"></i>
                 <div ng-if="!editMode"> {{service.address}}</div>
                 <!--                <input type="text" ng-if="editMode" ng-model="service.address" placeholder="Indirizzo" autofocus>-->
-                <placeautocomplete ng-if="refresh" ng-model="service.address" attr-placeholder="{{'service_address_placeholder' | translate}}" click-activation="false" data="placesfrom" on-type="typePlace" placeholder="{{'service_address_placeholder' | translate}}" on-select="changeStringFrom" ng-blur="setNameParam"></placeautocomplete>
+                <placeautocomplete ng-if="refresh" ng-model="service.address" attr-placeholder="{{'service_address_placeholder' | translate}}" click-activation="false" data="places" on-type="typePlace" placeholder="{{'service_address_placeholder' | translate}}" on-select="changeStringFrom" ng-blur="setNameParam"></placeautocomplete>
                 <a class="button-icon plan-viaggia-fromto  icon ion-map" ng-click="openMapPlan('from')"></a>
               </ion-item>
-              <ion-item class="item-accordion-content" ng-show="isServiceShown(service)">
+              <ion-item class="item-accordion-content" ng-click="openAreaSelection()" ng-show="isServiceShown(service)">
                 <i class="icon ion-android-locate"></i>
-                <div ng-if="!editMode"> {{service.area}}</div>
-                <input type="text" ng-if="editMode" ng-model="service.area" placeholder="{{'service_zone_placeholder' | translate}}" autofocus>
-
+                <div> {{getAreaNamebuID(service.area)}}</div>
+                <!--                <input type="text" ng-if="editMode" ng-model="service.area" placeholder="{{'service_zone_placeholder' | translate}}" autofocus>-->
+                <!--
+                <select ng-if="editMode" ng-model="service.area">
+                  <option ng-repeat="zone in zones track by $index">{{zone.name}}</option>
+                </select>
+-->
               </ion-item>
               <ion-item class="item-accordion-content" ng-show="isServiceShown(service)">
                 <i class="icon ion-ios-information"></i>
