--- a/gi-pro-mobile/www/templates/mapPopup.html
+++ b/gi-pro-mobile/www/templates/mapPopup.html
@@ -8,7 +8,7 @@
   <div class="map-stop-hline"></div>
   <div class="row map-stop-name">
     <div class="col">
-      {{name}}
+      {{nameNewAddress}}
     </div>
   </div>
 
